<package>
  <name>rviz_mesh_plugin</name>
  <description>
    RViz display types for the mesh_msgs package.
  </description>
  <version>1.0.0</version>
  <maintainer email="hdeeken@uos.de">Henning Deeken</maintainer>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="mmrozins@uos.de">Marcel Mrozinski</author>
  <buildtool_depend>catkin</buildtool_depend>

  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_mesh_plugin</url>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>lvr_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>lvr_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mesh_msgs</run_depend>
  
  <export>
    <rviz plugin="${prefix}/rviz_plugin.xml"/>
  </export>
</package>
